# incubator-teaclave-crates

./: .asf.yaml  .licenserc.yaml  README.md
casbin-rs/: Cargo.toml
casbin-rs/src/: config.rs  convert.rs  lib.rs  prelude.rs  util.rs
casbin-rs/src/adapter/: mod.rs
casbin-rs/src/model/: default_model.rs
gbdt-rs/: Cargo.toml
gbdt-rs/src/: gradient_boost.rs  input.rs
getrandom/: Cargo.toml
getrandom/src/: error.rs  lib.rs  teaclave.rs
image/src/io/: free_functions.rs  reader.rs
licenses/: LICENSE-BoringSSL  LICENSE-other-bits  LICENSE-ring.txt
mio/src/: lib.rs
mio/src/sys/unix/: mod.rs  waker.rs
num_cpus/src/: lib.rs  linux.rs  sgx.rs
rand/src/rngs/adapter/: reseeding.rs
rayon/rayon-core/src/: log.rs
rhai/: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  build.template
rhai/.github/workflows/: benchmark.yml  build.yml  ci.yaml
rhai/benches/: engine.rs  eval_array.rs  eval_expression.rs  eval_module.rs  iterations.rs  parsing.rs  primes.rs
rhai/codegen/: Cargo.toml
rhai/codegen/src/: attrs.rs  function.rs  lib.rs  module.rs  register.rs  rhai_module.rs
rhai/codegen/src/test/: function.rs  module.rs
rhai/codegen/tests/: test_functions.rs  test_modules.rs  test_nested.rs
rhai/codegen/ui_tests/: export_fn_bad_attr.stderr  export_fn_bad_value.stderr  export_fn_cfg.stderr  export_fn_extra_value.stderr  export_fn_junk_arg.stderr  export_fn_missing_value.stderr  export_fn_path_attr.stderr  export_fn_raw_noreturn.stderr  export_fn_raw_return.stderr  export_mod_bad_attr.stderr  export_mod_bad_value.stderr  export_mod_cfg.stderr  export_mod_extra_value.stderr  export_mod_junk_arg.stderr  export_mod_missing_value.stderr  export_mod_path_attr.stderr  export_mod_raw_noreturn.stderr  export_mod_raw_return.stderr  first_shared_ref.stderr  non_clonable.stderr  non_clonable_second.stderr  return_mut_ref.stderr  return_pointer.stderr  return_shared_ref.stderr  rhai_fn_bad_attr.stderr  rhai_fn_bad_value.stderr  rhai_fn_duplicate_attr.rs  rhai_fn_duplicate_attr.stderr  rhai_fn_extra_value.stderr  rhai_fn_getter_conflict.stderr  rhai_fn_getter_multiple.stderr  rhai_fn_getter_return.stderr  rhai_fn_getter_signature.stderr  rhai_fn_global_multiple.stderr  rhai_fn_index_getter_multiple.stderr  rhai_fn_index_getter_return.stderr  rhai_fn_index_getter_signature.stderr  rhai_fn_index_setter_multiple.stderr  rhai_fn_junk_arg.stderr  rhai_fn_missing_value.stderr  (+26 more)
rhai/examples/: README.md  arrays_and_structs.rs  callback.rs  custom_types.rs  custom_types_and_methods.rs  hello.rs  reuse_scope.rs  serde.rs  simple_fn.rs  strings.rs  threading.rs
rhai/examples/definitions/: main.rs  script.rhai
rhai/examples/definitions/.rhai/: all_in_one.d.rhai  all_in_one_without_standard.d.rhai  defs.json
rhai/examples/definitions/.rhai/definitions/: __builtin-operators__.d.rhai  __builtin__.d.rhai  __scope__.d.rhai  __static__.d.rhai  general_kenobi.d.rhai
rhai/examples/event_handler_js/: main.rs  script.rhai
rhai/examples/event_handler_main/: main.rs  script.rhai
rhai/examples/event_handler_map/: main.rs  script.rhai
rhai/no_std/no_std_test/: Cargo.toml  README.md
rhai/no_std/no_std_test/src/: main.rs
rhai/scripts/: function_decl5.rhai
rhai/src/: README.md  defer.rs  engine.rs  lib.rs  optimizer.rs  parser.rs  reify.rs  tests.rs  tokenizer.rs
rhai/src/api/: build_type.rs  call_fn.rs  compile.rs  custom_syntax.rs  deprecated.rs  eval.rs  events.rs  files.rs  formatting.rs  json.rs  limits.rs  limits_unchecked.rs  mod.rs  optimize.rs  options.rs  register.rs  run.rs
rhai/src/api/definitions/: builtin-functions.d.rhai  builtin-operators.d.rhai  mod.rs
rhai/src/ast/: ast.rs  expr.rs  flags.rs  ident.rs  mod.rs  namespace.rs  namespace_none.rs  script_fn.rs  stmt.rs
rhai/src/config/: hashing.rs  hashing_env.rs  mod.rs
rhai/src/eval/: cache.rs  chaining.rs  data_check.rs  debugger.rs  eval_context.rs  expr.rs  global_state.rs  mod.rs  stmt.rs  target.rs
rhai/src/func/: args.rs  builtin.rs  call.rs  callable_function.rs  func.rs  hashing.rs  mod.rs  native.rs  plugin.rs  register.rs  script.rs
rhai/src/module/: mod.rs
rhai/src/module/resolvers/: collection.rs  dummy.rs  file.rs  mod.rs  stat.rs
rhai/src/serde/: de.rs  deserialize.rs  metadata.rs  mod.rs  ser.rs  serialize.rs
rhai/src/types/: bloom_filter.rs  custom_types.rs  dynamic.rs  error.rs  float.rs  fn_ptr.rs  immutable_string.rs  interner.rs  mod.rs  parse_error.rs  position.rs  position_none.rs  scope.rs  variant.rs
rhai/tests/: arrays.rs  assignments.rs  binary_ops.rs  bit_fields.rs  blobs.rs  bool_op.rs  build_type.rs  call_fn.rs  closures.rs  comments.rs  compound_equality.rs  constants.rs  custom_syntax.rs  data_size.rs  debugging.rs  eval.rs  expressions.rs  float.rs  fn_ptr.rs  for.rs  functions.rs  get_set.rs  internal_fn.rs  looping.rs  maps.rs  math.rs  method_call.rs  mismatched_op.rs  modules.rs  native.rs  not.rs  number_literals.rs  operations.rs  ops.rs  optimizer.rs  options.rs  packages.rs  plugins.rs  plugins_unroll.rs  print.rs  (+12 more)
rhai/tools/: README.md  keywords.txt  reserved.txt
ring/: Cargo.toml
ring-0.17.14/: Cargo.toml.orig  build.rs
ring-0.17.14/src/: lib.rs  rand.rs
ring/crypto/: cpu-intel.c
ring/src/: digest.rs
ring/src/aead/: chacha.rs
rust-csv/src/: reader.rs  writer.rs
rustface/: Cargo.toml
rustface/src/: lib.rs
rustface/src/common/: mod.rs
rustface/src/model/: mod.rs
rustls-0.19.1/rustls/src/: keylog.rs  ticketer.rs  verify.rs
rustls-0.21.2/rustls/src/: key_log_file.rs
rustls/rustls/src/: keylog.rs  ticketer.rs  verify.rs
rusty-machine/: Cargo.toml
rusty-machine/src/data/transforms/: shuffle.rs
rusty-machine/src/learning/: k_means.rs  logistic_reg.rs  svm.rs
rusty-machine/src/learning/nnet/: net_layer.rs
rusty-machine/src/learning/toolkit/: rand_utils.rs
tantivy/src/directory/: file_watcher.rs
tonic/tonic/src/transport/channel/: tls.rs
tonic/tonic/src/transport/server/: tls.rs
tonic/tonic/src/transport/service/: tls.rs
